Bug 77388 - Images, inserted in a table cell, go out of cell borders when the document (and thus the table) is zoomed.
Summary: Images, inserted in a table cell, go out of cell borders when the document (a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer Web (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks: Writer-Images Writer-Web-Layout
  Show dependency treegraph
 
Reported: 2014-04-13 08:05 UTC by Alex
Modified: 2024-06-14 17:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Images, inserted in a table cell, go out of cell borders when zoomed in (1.18 MB, application/vnd.oasis.opendocument.text)
2015-05-12 18:48 UTC, Alex
Details
screenshot about the problem (missing border), and its resolution (77.96 KB, image/jpeg)
2024-06-03 21:26 UTC, László Németh
Details
screenshots: also zero padding resulted missing border before (24.31 KB, image/png)
2024-06-03 21:33 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2014-04-13 08:05:05 UTC
Images, inserted in a table cell, go out of cell borders when the document (and thus the table) is zoomed in (that is, when the zoom factor is incremented).

There is no option in the image property or in the cell property to deal this problem.


Thank You.
Comment 1 sophie 2014-04-23 13:25:49 UTC
Hi, I've inserted 3 images in different cells of a table, zoom until 440% and could not reproduce what you describe, cell border and images are still displayed correctly. Version 4.2.4.1 Ubuntu 14.04 - Sophie
Comment 2 Alex 2014-04-23 18:38:56 UTC
(In reply to comment #1)
> Hi, I've inserted 3 images in different cells of a table, zoom until 440%
> and could not reproduce what you describe, cell border and images are still
> displayed correctly. Version 4.2.4.1 Ubuntu 14.04 - Sophie


The bug happens only when You set "Layout Web" in the menù "Visualizza" (sorry, I have the Italian version).

Hi, Alex.
Comment 3 sophie 2014-04-24 08:34:38 UTC
ok, so this is confirmed with Web view in 4.2.4.1 Ubuntu 14.04. Set plateform to all and status to New - Sophie
Comment 4 Joel Madero 2015-05-12 17:27:18 UTC
Doing the following:

1) Setting priority correctly - this is not a major bug. At most it's a normal bug (prevents high quality work)

2) Setting to NEEDINFO - please attach a test document so that we can easily and quickly test against newer versions of LibreOffice

3) Provide reproducible steps

4) If possible test against 4.4.3 or newer;

5) If possible test against 3.3 to see if it ever worked correctly (http://downloadarchive.documentfoundation.org/libreoffice/old/)

Once you've done these things please set the bug to NEW
Comment 5 Alex 2015-05-12 18:48:13 UTC
Created attachment 115523 [details]
Images, inserted in a table cell, go out of cell borders when zoomed in

Images, inserted in a table cell, go out of cell borders when the document (and thus the table) is zoomed in (that is, when the zoom factor is incremented).

There is no option in the image property or in the cell property to deal this problem.

The bug happens only when You set "Layout Web" in the menù "Visualizza" (sorry, I have the Italian version).

Hi, Alex.
Comment 6 Joel Madero 2015-05-12 19:03:46 UTC
I suspect you didn't want to assign the bug to yourself (unless you're fixing it) so removing that.
Comment 7 Alex 2015-05-13 04:48:24 UTC
Yes I confirm, I don't want to assign the bug to myself. 
Sorry for the mistake.
Comment 8 Buovjaga 2015-05-18 09:21:26 UTC
(In reply to Alex from comment #5)
> Created attachment 115523 [details]
> Images, inserted in a table cell, go out of cell borders when zoomed in
> 
> Images, inserted in a table cell, go out of cell borders when the document
> (and thus the table) is zoomed in (that is, when the zoom factor is
> incremented).
> 
> There is no option in the image property or in the cell property to deal
> this problem.
> 
> The bug happens only when You set "Layout Web" in the menù "Visualizza"
> (sorry, I have the Italian version).

Confirmed.
I don't know, if it's related to the fact that in the Print layout we can see the images are overflowing their cells.

Win 7 Pro 64-bit, Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Locale: fi_FI
Comment 9 QA Administrators 2016-09-20 09:42:19 UTC Comment hidden (obsolete)
Comment 10 Roman Kuznetsov 2019-04-12 10:37:21 UTC
still repro in

Version: 6.3.0.0.alpha0+
Build ID: 7327260de3c0c627e62f7c3fddbe3d71ea88e88f
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-04-05_06:26:35
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 11 QA Administrators 2021-04-12 03:32:02 UTC Comment hidden (obsolete)
Comment 12 QA Administrators 2023-04-13 03:23:51 UTC Comment hidden (obsolete)
Comment 13 Stéphane Guillou (stragu) 2023-10-18 15:36:39 UTC
Same in OOo 3.3, so inherited.

Still reproduced in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9374f74385d7dfe77d1902d3d82af20143bc775
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 14 Commit Notification 2024-06-03 19:50:36 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/03aa8a1d9bfe4af2f37df0bde42193c2cf90ffb4

tdf#77388 sw: fix missing table border at cropped images

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 László Németh 2024-06-03 19:52:21 UTC
Commit description:

tdf#77388 sw: fix missing table border at cropped images

At images cropped by the bottom or right cell boundaries,
or at images with zero padding in table cells (e.g, in
test document of tdf#160836), table borders were hovered
by the image, resulting missing table borders.

First paint the cell content, and after that the DOCX-like
"collapsing" cell borders in SwTabFrame::PaintSwFrame.

Note: this doesn't modify painting of the objects
anchored to characters (which still hovers the cell borders),
and painting of the text content of the cells (which are
still hovered by the cell borders at zero padding, despite
their non-transparent background color).
Comment 16 László Németh 2024-06-03 21:26:49 UTC
Created attachment 194525 [details]
screenshot about the problem (missing border), and its resolution
Comment 17 László Németh 2024-06-03 21:33:30 UTC
Created attachment 194526 [details]
screenshots: also zero padding resulted missing border before

left: missing border because of zero padding (missing left and top borders) and cropping by cell bondary (missing right and bottom borders).

right: visible borders after the fix
Comment 18 Commit Notification 2024-06-05 08:06:59 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78a9afc5ea493a703467b72475a9d80a9fa8a6db

tdf#77388 sw: add missing comment

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-06-14 17:26:57 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/2a15e5839c399b312a53da80c983503368a8ac47

tdf#77388 sw: fix missing table border at cropped images

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.