tdf#77388 sw: fix missing table border at cropped images

At images cropped by the bottom or right cell boundaries,
or at images with zero padding in table cells (e.g, in
test document of tdf#160836), table borders were hovered
by the image, resulting missing table borders.

First paint the cell content, and after that the DOCX-like
"collapsing" cell borders in SwTabFrame::PaintSwFrame.

Note: this doesn't modify painting of the objects
anchored to characters (which still hovers the cell borders),
and painting of the text content of the cells (which are
still hovered by the cell borders at zero padding, despite
their non-transparent background color).

Change-Id: Ie41ab275fd101bb9e26d4165362063f0332ac3c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168384
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 03aa8a1d9bfe4af2f37df0bde42193c2cf90ffb4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168320
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>